correcting font sizes a bit to improve readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,6 @@ body {
 
 .widget.information .body {
 	font-family: courier, monospace;
-	font-size: 0.7rem;
 }
 
 h5 {
